# BD2-Project1

./: .gitignore  CMakeLists.txt  CSVreader.cpp  README.md  Record.h  Record_avl.h  Record_sequential.h  avl.cpp  avl2  avl2.cpp  avl_.cpp  avl_f  extendible_hashing.cpp  extendible_hashing.h  extendible_hashing.hpp  leer_csv.cpp  main.cpp  prueba.cpp  prueba_parser.cpp  run.sh  sequential_file.hpp
AVLFile/: Record_avl.h  avl_file.hpp  avl_file_.hpp  avl_test.cpp
Antiguo/: avl_antiguo.cpp  leer_csv.cpp  sequential_antiguo.hpp
CSV/: CSV_reader.cpp  datos_10.csv  datos_1000.csv  datos_10000.csv  datos_50000.csv
Data/: datos_1000.csv
Dataset/: datos_1000.csv  datos_10000.csv
ExtendibleHashing/: Record_hash.h  extendible_hashing.hpp  test_hashing.cpp
Parser/: Avl_file.hpp  Parser.hpp  Scanner.hpp  Token.hpp  utils.hpp
Sequential file/: prueba  prueba.cpp  run.sh  sequential_file  sequential_file.cpp
SequentialFile/: run.sh  run_2.sh  sequential_file.hpp  test_sequential.cpp
interface/: button.h  interfaz_main.cpp  record_.h
interfaz/: button.h  interfaz_avl.h  interfaz_extendibleHash.h  interfaz_main.cpp  interfaz_sequential.h  interfaz_svl.h  label.h  record_.h  run.sh  textinput.h
src/: Avl_file.hpp  DynamicHash_file.hpp  Sequential_file.hpp
